qt/multimedia/gen_qvideoprobe.h

class QEvent;
class QMediaObject;
class QMediaRecorder;
class QMetaObject;
class QObject;
class QVideoFrame;
class QVideoProbe;
typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QMediaObject QMediaObject;
typedef struct QMediaRecorder QMediaRecorder;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QTimerEvent QTimerEvent;
typedef struct QVideoFrame QVideoFrame;
typedef struct QVideoProbe QVideoProbe;
QVideoProbe* QVideoProbe_new();
QVideoProbe* QVideoProbe_new2(QObject* parent);
QMetaObject* QVideoProbe_metaObject(const QVideoProbe* self);
void* QVideoProbe_metacast(QVideoProbe* self, const char* param1);
int QVideoProbe_metacall(QVideoProbe* self, int param1, int param2, void** param3);
struct miqt_string QVideoProbe_tr(const char* s);
struct miqt_string QVideoProbe_trUtf8(const char* s);
bool QVideoProbe_setSource(QVideoProbe* self, QMediaObject* source);
bool QVideoProbe_setSourceWithSource(QVideoProbe* self, QMediaRecorder* source);
bool QVideoProbe_isActive(const QVideoProbe* self);
void QVideoProbe_videoFrameProbed(QVideoProbe* self, QVideoFrame* frame);
void QVideoProbe_connect_videoFrameProbed(QVideoProbe* self, intptr_t slot);
void QVideoProbe_flush(QVideoProbe* self);
void QVideoProbe_connect_flush(QVideoProbe* self, intptr_t slot);
struct miqt_string QVideoProbe_tr2(const char* s, const char* c);
struct miqt_string QVideoProbe_tr3(const char* s, const char* c, int n);
struct miqt_string QVideoProbe_trUtf82(const char* s, const char* c);
struct miqt_string QVideoProbe_trUtf83(const char* s, const char* c, int n);
bool QVideoProbe_override_virtual_metacall(void* self, intptr_t slot);
int QVideoProbe_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QVideoProbe_override_virtual_event(void* self, intptr_t slot);
bool QVideoProbe_virtualbase_event(void* self, QEvent* event);
bool QVideoProbe_override_virtual_eventFilter(void* self, intptr_t slot);
bool QVideoProbe_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QVideoProbe_override_virtual_timerEvent(void* self, intptr_t slot);
void QVideoProbe_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QVideoProbe_override_virtual_childEvent(void* self, intptr_t slot);
void QVideoProbe_virtualbase_childEvent(void* self, QChildEvent* event);
bool QVideoProbe_override_virtual_customEvent(void* self, intptr_t slot);
void QVideoProbe_virtualbase_customEvent(void* self, QEvent* event);
bool QVideoProbe_override_virtual_connectNotify(void* self, intptr_t slot);
void QVideoProbe_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QVideoProbe_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QVideoProbe_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QVideoProbe_staticMetaObject();
void QVideoProbe_delete(QVideoProbe* self);